# car-price-ml

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
api/: app.py
data/processed/: car_data_processed.csv
notebooks/: eda.ipynb
src/: predict.py  preprocessing.py  train.py
